--- a/app/src/main/res/layout/activity_linear.xml
+++ b/app/src/main/res/layout/activity_linear.xml
@@ -11,7 +11,7 @@
         android:textSize="30sp"
         android:layout_margin="20dp"
         android:padding="60dp"
-        android:background="@color/red"
+        android:background="@color/purple_200"
         android:textColor="@color/white"/>
 <Button
     android:layout_width="wrap_content"
